# Thesis

./: .gitignore  .pre-commit-config.yaml  FEATURES_USED.csv  Hybrid_lstm_req_units.model  LstmMvInput.py  README.md  SMP.csv  SMP_VALUES.csv  app.py  build_app  build_server  data.csv  data_for_training.csv  data_for_training_extended_features_list.csv  data_for_training_power_generation.csv  database.db  lstm.model  lstm_single_input  main.py  power.csv  power_generation.csv  power_plants.csv  pyproject.toml  requirements.db  requirements.txt  requirements_app.txt  requirements_server.txt  requirements_units.db  requirements_units_weather.db  requirements_weather.db  server.py  test.py  test_set1.xlsx  train_set.csv  training_data_no_missing_values.csv  training_set.csv  update_data.py  yaml.yaml
all_files_isp1/: 20201113_ISP1Requirements_01.xlsx  20201114_ISP1Requirements_01.xlsx  20201115_ISP1Requirements_01.xlsx  20201116_ISP1Requirements_01.xlsx  20201117_ISP1Requirements_01.xlsx  20201118_ISP1Requirements_01.xlsx  20201119_ISP1Requirements_01.xlsx  20201120_ISP1Requirements_01.xlsx  20201121_ISP1Requirements_01.xlsx  20201122_ISP1Requirements_01.xlsx  20201123_ISP1Requirements_01.xlsx  20201124_ISP1Requirements_01.xlsx  20201125_ISP1Requirements_01.xlsx  20201126_ISP1Requirements_01.xlsx  20201127_ISP1Requirements_01.xlsx  20201128_ISP1Requirements_01.xlsx  20201129_ISP1Requirements_01.xlsx  20201130_ISP1Requirements_01.xlsx  20201201_ISP1Requirements_01.xlsx  20201202_ISP1Requirements_01.xlsx  20201203_ISP1Requirements_01.xlsx  20201204_ISP1Requirements_01.xlsx  (+165 more)
(+89 files in other folders)
